# blinka-cli

./: LICENSE  README.md  blinka.py  blinkautil.py  board.py  board_id_map.json  boot_volume_names.json  fsutil.py  requirements.txt  s3util.py  setup.cfg  setup.py  urlutil.py
.github/workflows/: python-app.yml
blinka/: __main__.py  blinka.py  blinkautil.py  board.py  board_id_map.json  boot_volume_names.json  fontutil.py  fsutil.py  urlutil.py
blinka/commands/: backup.py  bootloader.py  bossa.md  bossa.py  font.md  font.py  port.py  sync.py  update.py  updatelibs.py
commands/: backup.py  bootloader.py  bossa.py  font.md  font.py  fontutil.py  sync.py  update.py
