[metadata]
name = blinka-bcr
version = 0.0.1
author = Blake Ramsdell
author_email = blaker@gmail.com
description = Command-line utility for CircuitPython
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/bcr/blinka-cli
packages=setuptools.find_packages()
classifiers=
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.package_data]
*=*.json
